Tested geomshaders and it worked. This commit is pointless

--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -93,5 +93,8 @@
     <None Include="glsl\main.vert">
       <Filter>glsl</Filter>
     </None>
+    <None Include="glsl\main.geom">
+      <Filter>glsl</Filter>
+    </None>
   </ItemGroup>
 </Project>
