--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Shaders.cpp" />
     <ClCompile Include="Vec3D.cpp" />
     <ClCompile Include="Vec3F.cpp" />
+    <ClCompile Include="Vec4F.cpp" />
     <ClCompile Include="Visualisation.cpp" />
     <ClCompile Include="VisualisationScene.cpp" />
   </ItemGroup>
@@ -146,6 +147,7 @@
     <ClInclude Include="Shaders.h" />
     <ClInclude Include="Vec3D.h" />
     <ClInclude Include="Vec3F.h" />
+    <ClInclude Include="Vec4F.h" />
     <ClInclude Include="Visualisation.h" />
     <ClInclude Include="VisualisationScene.h" />
   </ItemGroup>
