Finished auto shader, finished refactor and created a half-decent sample project.

--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EntityScene.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="visualisation\Axis.cpp" />
     <ClCompile Include="visualisation\Camera.cpp" />
@@ -152,13 +153,14 @@
     <ClCompile Include="visualisation\Skybox.cpp" />
     <ClCompile Include="visualisation\Texture.cpp" />
     <ClCompile Include="visualisation\Visualisation.cpp" />
-    <ClCompile Include="visualisation\VisualisationScene.cpp" />
+    <ClCompile Include="visualisation\Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="glsl\main.frag" />
     <None Include="glsl\main.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EntityScene.h" />
     <ClInclude Include="visualisation\Axis.h" />
     <ClInclude Include="visualisation\Camera.h" />
     <ClInclude Include="visualisation\Entity.h" />
@@ -168,7 +170,7 @@
     <ClInclude Include="visualisation\Skybox.h" />
     <ClInclude Include="visualisation\Texture.h" />
     <ClInclude Include="visualisation\Visualisation.h" />
-    <ClInclude Include="visualisation\VisualisationScene.h" />
+    <ClInclude Include="visualisation\Scene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
