--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="visualisation\Entity-impl.cpp">
       <Filter>Header Files\Visualisation</Filter>
     </ClCompile>
+    <ClCompile Include="visualisation\TextureCubeMap.cpp">
+      <Filter>Source Files\Visualisation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="glsl\main.frag">
