Included the device pointer in the CUDATextureBuffer struct.
Also added the README to the solution.

--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -160,6 +160,7 @@
   <ItemGroup>
     <None Include="glsl\main.frag" />
     <None Include="glsl\main.vert" />
+    <None Include="visualisation\util\cuda.cuh" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EntityScene.h" />
